Fix alt text flash on Firefox

--- a/src/components/focus/focus.styles.less
+++ b/src/components/focus/focus.styles.less
@@ -39,6 +39,7 @@
   width: 100%;
   height: 100%;
   object-fit: contain;
+  color: transparent; /* no alt text flash on Firefox */
 }
 
 #zoom-figcaption {
